--- a/index.html
+++ b/index.html
@@ -17,22 +17,26 @@
         <div class="card">
           <img src="img/portfolio1.png" alt="">
           <h2>Домашний кинотеатр с изюминкой</h2>
-          <p>В нашем новом проекте домашнего кинотеатра задача была в целом довольно типичной – построить систему с использованием встроенных акустических систем.</p>
+          <p>В нашем новом проекте домашнего кинотеатра задача была в целом довольно типичной – построить 
+            систему с использованием встроенных акустических систем.</p>
         </div>
         <div class="card">
           <img src="img/portfolio2.png" alt="">
           <h2>Роскошный автомобиль с «умным салоном</h2>
-          <p>Эксклюзивный Mercedes Benz V class обрел не только шикарный салон первого класса с креслами, баром, сейфом и телевизором, но и благодаря нашей помощи позволил управлять всем этим богатством с iPad!</p>
+          <p>Эксклюзивный Mercedes Benz V class обрел не только шикарный салон первого класса с креслами, 
+            баром, сейфом и телевизором, но и благодаря нашей помощи позволил управлять всем этим богатством с iPad!</p>
         </div>
         <div class="card">
           <img src="img/portfolio3.png" alt="">
           <h2>Гостиная-кинотеатр</h2>
-          <p>Посмотрев на фотографии этой светлой гостиной сразу и не поймешь, что расположена она в цокольном этаже дома и не имеет окон.</p>
+          <p>Посмотрев на фотографии этой светлой гостиной сразу и не поймешь, что расположена она 
+            в цокольном этаже дома и не имеет окон.</p>
         </div>
         <div class="card">
           <img src="img/portfolio4.png" alt="">
           <h2>Кинотеатр на крыше</h2>
-          <p>Посмотрев на фотографии этой светлой гостиной сразу и не поймешь, что расположена она в цокольном этаже дома и не имеет окон.</p>
+          <p>Посмотрев на фотографии этой светлой гостиной сразу и не поймешь, что расположена она в цокольном этаже дома 
+            и не имеет окон.</p>
         </div>
         <div class="arrows">
           <img src="img/arrow_left.png" alt="prev">
