--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="img/portfolio2.png" alt="">
           <h2>Роскошный автомобиль с «умным салоном</h2>
           <p>Эксклюзивный Mercedes Benz V class обрел не только шикарный салон первого класса с креслами, 
-            баром, сейфом и телевизором, но и благодаря нашей помощи позволил управлять всем этим богатством с iPad!</p>
+            баром, сейфом и телевизором, но управлять всем этим богатством с iPad!</p>
         </div>
         <div class="card">
           <img src="img/portfolio3.png" alt="">
